# ScarGo

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  partitions.csv  sdkconfig  sdkconfig.defaults  version_bump.py  version_state.json
.claude/: settings.local.json
docs/: architecture.md  architecture.zh-CN.md  hardware-spec.md  hardware-spec.zh-CN.md  index.md  index.zh-CN.md
hardware/: README.md  README.zh-CN.md
main/: CMakeLists.txt  idf_component.yml  main.c
main/include/: app_tasks.h  board_defaults.h  buzzer_service.h  config_store.h  cpu_usage_service.h  display_service.h  fan_service.h  imu_service.h  kinematics.h  log_service.h  ota_service.h  pca9685_driver.h  rc_input.h  robot_control.h  servo_output.h  shared_i2c.h  storage_service.h  web_ui.h  wifi_config.h
main/src/: app_main.c  app_tasks.c  board_defaults.c  buzzer_service.c  config_store.c  cpu_usage_service.c  display_service.c  fan_service.c  imu_service.c  kinematics.c  log_service.c  ota_service.c  pca9685_driver.c  rc_input.c  robot_control.c  servo_output.c  shared_i2c.c  storage_service.c  web_ui.c  wifi_config.c
scripts/: README.md  README.zh-CN.md
simulation/: README.md  README.zh-CN.md
spiffs/: index.html
